# tarot-api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_linux.sh  compile_windows.bat  main.cpp
api/: server.cpp
frontend/: .env.example  index.html  package.json  vite.config.js
frontend/src/: App.jsx
models/: Card.cpp  Card.h  TarotCard.h  User.h
services/: ProbabilityEngine.h  SynergyEngine.h  TarotDeck.cpp  TarotDeck.h  TarotEngine.h
utils/: DataLoader.h  FileManager.h  TarotCombinations.cpp  TarotCombinations.h  TimeUtil.h
